// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SearchField [common] example testing should match snapshot(s) for 1.default 1`] = `
<div
  className="lucid-SearchField"
>
  <TextField
    debounceLevel={500}
    isDisabled={false}
    isMultiLine={false}
    lazyLevel={1000}
    onBlur={[Function]}
    onChange={[Function]}
    onChangeDebounced={[Function]}
    onSubmit={[Function]}
    rows={5}
    style={null}
    value=""
  />
  <div
    className="lucid-SearchField-Icon-container"
  >
    <SearchIcon
      className="lucid-SearchField-Icon"
    />
  </div>
</div>
`;

exports[`SearchField [common] example testing should match snapshot(s) for 2.interactive 1`] = `
<div
  className="lucid-SearchField"
>
  <TextField
    debounceLevel={500}
    isDisabled={false}
    isMultiLine={false}
    lazyLevel={1000}
    onBlur={[Function]}
    onChange={[Function]}
    onChangeDebounced={[Function]}
    onSubmit={[Function]}
    rows={5}
    style={null}
    value=""
  />
  <div
    className="lucid-SearchField-Icon-container"
  >
    <SearchIcon
      className="lucid-SearchField-Icon"
    />
  </div>
</div>
`;

exports[`SearchField [common] example testing should match snapshot(s) for 3.placeholder 1`] = `
<div
  className="lucid-SearchField"
>
  <TextField
    debounceLevel={500}
    isDisabled={false}
    isMultiLine={false}
    lazyLevel={1000}
    onBlur={[Function]}
    onChange={[Function]}
    onChangeDebounced={[Function]}
    onSubmit={[Function]}
    placeholder="Name/ID"
    rows={5}
    style={null}
    value=""
  />
  <div
    className="lucid-SearchField-Icon-container"
  >
    <SearchIcon
      className="lucid-SearchField-Icon"
    />
  </div>
</div>
`;

exports[`SearchField [common] example testing should match snapshot(s) for 4.disabled 1`] = `
<div
  className="lucid-SearchField"
>
  <TextField
    debounceLevel={500}
    isDisabled={true}
    isMultiLine={false}
    lazyLevel={1000}
    onBlur={[Function]}
    onChange={[Function]}
    onChangeDebounced={[Function]}
    onSubmit={[Function]}
    rows={5}
    style={null}
    value=""
  />
  <div
    className="lucid-SearchField-Icon-container"
  >
    <SearchIcon
      className="lucid-SearchField-Icon"
    />
  </div>
</div>
`;

exports[`SearchField [common] example testing should match snapshot(s) for 5.custom-icon 1`] = `
<div
  className="lucid-SearchField"
>
  <TextField
    debounceLevel={500}
    isDisabled={false}
    isMultiLine={false}
    lazyLevel={1000}
    onBlur={[Function]}
    onChange={[Function]}
    onChangeDebounced={[Function]}
    onSubmit={[Function]}
    rows={5}
    style={null}
    value=""
  />
  <div
    className="lucid-SearchField-Icon-container"
  >
    <LoadingIcon
      aspectRatio="xMidYMid meet"
      className="lucid-SearchField-Icon"
      isBadge={false}
      isClickable={false}
      isDisabled={false}
      size={16}
      speed="normal"
      viewBox="0 0 16 16"
    />
  </div>
</div>
`;

exports[`SearchField [common] example testing should match snapshot(s) for 6.custom-text-field 1`] = `
<div
  className="lucid-SearchField"
>
  <TextField
    debounceLevel={500}
    isDisabled={false}
    isMultiLine={false}
    key=".0"
    lazyLevel={1000}
    onBlur={[Function]}
    onChange={[Function]}
    onChangeDebounced={[Function]}
    onKeyDown={[Function]}
    onSubmit={[Function]}
    rows={5}
    style={null}
    value=""
  />
  <div
    className="lucid-SearchField-Icon-container"
  >
    <SearchIcon
      className="lucid-SearchField-Icon"
    />
  </div>
</div>
`;

exports[`SearchField [common] example testing should match snapshot(s) for 7.valid-search 1`] = `
<div
  className="lucid-SearchField"
  onBlur={[Function]}
  onKeyDown={[Function]}
>
  <TextField
    debounceLevel={500}
    isDisabled={false}
    isMultiLine={false}
    lazyLevel={1000}
    onBlur={[Function]}
    onChange={[Function]}
    onChangeDebounced={[Function]}
    onSubmit={[Function]}
    placeholder="icon doesn't become active until you type at least three characters ----->"
    rows={5}
    style={null}
    value=""
  />
  <div
    className="lucid-SearchField-Icon-container"
  >
    <SearchIcon
      className="lucid-SearchField-Icon"
    />
  </div>
</div>
`;

exports[`SearchField [common] example testing should match snapshot(s) for 8.props 1`] = `
<div
  className="lucid-SearchField"
>
  <TextField
    debounceLevel={500}
    isDisabled={false}
    isMultiLine={false}
    lazyLevel={1000}
    onBlur={[Function]}
    onChange={[Function]}
    onChangeDebounced={[Function]}
    onSubmit={[Function]}
    rows={5}
    style={null}
    value="foo"
  />
  <div
    className="lucid-SearchField-Icon-container"
  >
    <SearchIcon
      className="lucid-SearchField-Icon lucid-SearchField-Icon-active"
    />
  </div>
</div>
`;

exports[`SearchField [common] example testing should match snapshot(s) for 8.props 2`] = `
<div
  className="lucid-SearchField"
>
  <TextField
    debounceLevel={500}
    isDisabled={false}
    isMultiLine={false}
    lazyLevel={1000}
    onBlur={[Function]}
    onChange={[Function]}
    onChangeDebounced={[Function]}
    onSubmit={[Function]}
    placeholder="bar"
    rows={5}
    style={null}
    value=""
  />
  <div
    className="lucid-SearchField-Icon-container"
  >
    <SearchIcon
      className="lucid-SearchField-Icon"
    />
  </div>
</div>
`;

exports[`SearchField [common] example testing should match snapshot(s) for 8.props 3`] = `
<div
  className="lucid-SearchField"
>
  <TextField
    debounceLevel={500}
    isDisabled={true}
    isMultiLine={false}
    lazyLevel={1000}
    onBlur={[Function]}
    onChange={[Function]}
    onChangeDebounced={[Function]}
    onSubmit={[Function]}
    rows={5}
    style={null}
    value=""
  />
  <div
    className="lucid-SearchField-Icon-container"
  >
    <SearchIcon
      className="lucid-SearchField-Icon"
    />
  </div>
</div>
`;

exports[`SearchField [common] example testing should match snapshot(s) for 8.props 4`] = `
<div
  className="lucid-SearchField"
>
  <TextField
    debounceLevel={500}
    isDisabled={false}
    isMultiLine={false}
    lazyLevel={1000}
    onBlur={[Function]}
    onChange={[Function]}
    onChangeDebounced={[Function]}
    onSubmit={[Function]}
    rows={5}
    style={null}
    value=""
  />
  <div
    className="lucid-SearchField-Icon-container"
  >
    <SearchIcon
      className="lucid-SearchField-Icon"
    />
  </div>
</div>
`;

exports[`SearchField [common] example testing should match snapshot(s) for 8.props 5`] = `
<div
  className="lucid-SearchField"
>
  <TextField
    debounceLevel={500}
    isDisabled={false}
    isMultiLine={false}
    lazyLevel={1000}
    onBlur={[Function]}
    onChange={[Function]}
    onChangeDebounced={[Function]}
    onSubmit={[Function]}
    rows={5}
    style={null}
    value=""
  />
  <div
    className="lucid-SearchField-Icon-container"
  >
    <LoadingIcon
      aspectRatio="xMidYMid meet"
      className="lucid-SearchField-Icon"
      isBadge={false}
      isClickable={false}
      isDisabled={false}
      size={16}
      speed="normal"
      viewBox="0 0 16 16"
    />
  </div>
</div>
`;

exports[`SearchField [common] example testing should match snapshot(s) for 8.props 6`] = `
<div
  className="lucid-SearchField"
>
  <TextField
    debounceLevel={500}
    isDisabled={false}
    isMultiLine={false}
    lazyLevel={1000}
    onBlur={[Function]}
    onChange={[Function]}
    onChangeDebounced={[Function]}
    onSubmit={[Function]}
    rows={5}
    style={null}
    value="foo"
  />
  <div
    className="lucid-SearchField-Icon-container"
  >
    <LoadingIcon
      aspectRatio="xMidYMid meet"
      className="lucid-SearchField-Icon lucid-SearchField-Icon-active"
      isBadge={false}
      isClickable={false}
      isDisabled={false}
      size={16}
      speed="normal"
      viewBox="0 0 16 16"
    />
  </div>
</div>
`;

exports[`SearchField [common] example testing should match snapshot(s) for 8.props 7`] = `
<div
  className="lucid-SearchField"
>
  <TextField
    debounceLevel={500}
    isDisabled={false}
    isMultiLine={false}
    key=".0"
    lazyLevel={1000}
    onBlur={[Function]}
    onChange={[Function]}
    onChangeDebounced={[Function]}
    onSubmit={[Function]}
    rows={5}
    style={null}
    value="bar"
  />
  <div
    className="lucid-SearchField-Icon-container"
  >
    <SearchIcon
      className="lucid-SearchField-Icon lucid-SearchField-Icon-active"
    />
  </div>
</div>
`;

exports[`SearchField [common] example testing should match snapshot(s) for 9.debounced 1`] = `
<div
  className="lucid-SearchField"
  style={
    Object {
      "marginBottom": "10px",
    }
  }
>
  <TextField
    debounceLevel={500}
    isDisabled={false}
    isMultiLine={false}
    lazyLevel={1000}
    onBlur={[Function]}
    onChange={[Function]}
    onChangeDebounced={[Function]}
    onSubmit={[Function]}
    rows={5}
    style={null}
    value="foo"
  />
  <div
    className="lucid-SearchField-Icon-container"
  >
    <SearchIcon
      className="lucid-SearchField-Icon lucid-SearchField-Icon-active"
    />
  </div>
</div>
`;
